--- a/src/app/children/head/dashboard-head/children/all-forms-head/all-forms-head.html
+++ b/src/app/children/head/dashboard-head/children/all-forms-head/all-forms-head.html
@@ -8,6 +8,6 @@
     emptyDescription="Вы пока не назначили формы для заполнения.
     Как только появятся новые формы, они отобразятся здесь автоматически."
     emptyMessage="Нет форм в работе"
-    navigateRoute="progress-list"
+    navigateRoute="all-list"
     url="department-head">
 </app-forms-table>
