--- a/src/app/children/components/forms-table-edit-check/form-type-1-2/form-type-1-2.html
+++ b/src/app/children/components/forms-table-edit-check/form-type-1-2/form-type-1-2.html
@@ -151,6 +151,7 @@
                                         (change)="setRowCellValue(row, i, $any($event.target).value)"
                                         [class.has-value]="hasInputValue(row, i)"
                                         [disabled]="isCompletedForm"
+                                        [title]="getRowCellValue(row.values, i)"
                                         [value]="getRowCellValue(row.values, i)"
                                         class="cell-input reason"
                                     />
