--- a/src/app/children/components/forms-table-edit-check/form-type-3/form-type-3.html
+++ b/src/app/children/components/forms-table-edit-check/form-type-3/form-type-3.html
@@ -175,6 +175,7 @@
                                             (change)="setRowCellValue(row, colIndex, $any($event.target).value)"
                                             [class.has-value]="hasInputValue(row, colIndex)"
                                             [disabled]="isCompletedForm"
+                                            [title]="getRowCellValue(row.values, colIndex)"
                                             [value]="getRowCellValue(row.values, colIndex)"
                                             class="cell-input reason"
                                         />
