--- a/src/app/children/components/forms-table-edit-check/form-type-3/form-type-3.css
+++ b/src/app/children/components/forms-table-edit-check/form-type-3/form-type-3.css
@@ -13,8 +13,10 @@ app-header-form {
 }
 
 .content-wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
+    flex: 1;
 
     background: var(--day-base-background);
     padding-bottom: 32px;
