--- a/src/app/children/components/loader/loader.css
+++ b/src/app/children/components/loader/loader.css
@@ -1,8 +1,23 @@
+:host {
+    display: none;
+}
+
+:host(.is-loading) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+}
+
 .loading-spinner {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
 }
 
 .spinner {
