--- a/src/app/children/head/dashboard-head/children/all-forms-head/all-forms-head.css
+++ b/src/app/children/head/dashboard-head/children/all-forms-head/all-forms-head.css
@@ -1,4 +1,13 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    min-height: 0;
+}
+
 app-forms-table {
     flex: 1;
     min-height: 0;
+    width: 100%;
 }
