--- a/src/app/children/operator/dashboard-operator/children/completed-forms-operator/completed-forms-operator.css
+++ b/src/app/children/operator/dashboard-operator/children/completed-forms-operator/completed-forms-operator.css
@@ -1,4 +1,13 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    min-height: 0;
+}
+
 app-forms-table {
     flex: 1;
     min-height: 0;
+    width: 100%;
 }
